bug on tablet mixin

--- a/css/devices/_tablet.scss
+++ b/css/devices/_tablet.scss
@@ -1,8 +1,4 @@
 @media screen and  (min-width:800px) and (max-width: 978px) {
 
-	@include table-core;
-
-	@if $object-boxes != false {
-		@include papa-boxes;
-	}
+	@include tablet-core;
 }
